added little description

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -48,6 +48,7 @@ alias "sun_high" "mat_sun_color 1 1 1; alias sun_color sun_bright"
 alias "sun_bright" "mat_sun_color 1.2 1.2 1.2; alias sun_color sun_brightest"
 alias "sun_brightest" "mat_sun_color 1.5 1.5 1.5; alias sun_color sun_night"
 
+// put this line instead of F5, to make funny mode)))
 // bind "SPACE" "+jump; color_mode"
 bind "F5" "color_mode"
 alias "color_mode" "color1a"
